// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpreter callFunction() should map line numbers for errors returned in objects 1`] = `
"Error: My Error
  at myFunc (myFunc:1:27)"
`;

exports[`Interpreter callFunction() should report the correct line number for errors 1`] = `
"Error: My Error
  at myFunc (myFunc:1:18)"
`;

exports[`Interpreter callFunction() should throw errors that are thrown from the function 1`] = `
"Error: My Error
  at myFunc (myFunc:1:17)"
`;

exports[`Interpreter createFunction() should report the correct line number for syntax errors 1`] = `
"SyntaxError: Unexpected token
  at myFunc:1:12"
`;

exports[`traverse() should be able to iterate over a program 1`] = `
Array [
  "Script",
  "  ScriptBody",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        NumericLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        BooleanLiteral",
  "    VariableStatement",
  "      VariableDeclaration",
  "        BindingIdentifier",
  "        NumericLiteral",
  "    ExpressionStatement",
  "      AssignmentExpression",
  "        MemberExpression",
  "          IdentifierName",
  "          ThisExpression",
  "        BooleanLiteral",
  "    IfStatement",
  "      BooleanLiteral",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "            IdentifierReference",
  "    SwitchStatement",
  "      StringLiteral",
  "      CaseBlock",
  "        CaseClause",
  "          StringLiteral",
  "          ExpressionStatement",
  "            AssignmentExpression",
  "              IdentifierReference",
  "              NumericLiteral",
  "          BreakStatement",
  "        CaseClause",
  "          StringLiteral",
  "          ExpressionStatement",
  "            AssignmentExpression",
  "              IdentifierReference",
  "              NumericLiteral",
  "          BreakStatement",
  "        DefaultClause",
  "    ForStatement",
  "      VariableDeclaration",
  "        BindingIdentifier",
  "        NumericLiteral",
  "      RelationalExpression",
  "      UpdateExpression",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    ForOfStatement",
  "      ForDeclaration",
  "        ForBinding",
  "          BindingIdentifier",
  "      IdentifierReference",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    ForInStatement",
  "      ForDeclaration",
  "        ForBinding",
  "          BindingIdentifier",
  "      IdentifierReference",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    WhileStatement",
  "      RelationalExpression",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    DoWhileStatement",
  "      EqualityExpression",
  "        IdentifierReference",
  "        NumericLiteral",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "    TryStatement",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "      Catch",
  "        BindingIdentifier",
  "        Block",
  "          ExpressionStatement",
  "            CallExpression",
  "              IdentifierReference",
  "      Block",
  "        ExpressionStatement",
  "          AssignmentExpression",
  "            IdentifierReference",
  "            BooleanLiteral",
  "    TryStatement",
  "      Block",
  "        ExpressionStatement",
  "          CallExpression",
  "            IdentifierReference",
  "      Catch",
  "        BindingIdentifier",
  "        Block",
  "    FunctionDeclaration",
  "      BindingIdentifier",
  "      SingleNameBinding",
  "        BindingIdentifier",
  "      SingleNameBinding",
  "        BindingIdentifier",
  "      FunctionBody",
  "        ReturnStatement",
  "          AdditiveExpression",
  "            IdentifierReference",
  "            IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ArrowFunction",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          ConciseBody",
  "            ExpressionBody",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ArrowFunction",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          FunctionBody",
  "            ReturnStatement",
  "              AdditiveExpression",
  "                IdentifierReference",
  "                IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ArrowFunction",
  "          BindingElement",
  "            ObjectBindingPattern",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "          BindingElement",
  "            ObjectBindingPattern",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "            ObjectLiteral",
  "              PropertyDefinition",
  "                BooleanLiteral",
  "                IdentifierName",
  "          FunctionBody",
  "            ReturnStatement",
  "              AdditiveExpression",
  "                IdentifierReference",
  "                IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        ObjectBindingPattern",
  "          BindingProperty",
  "            SingleNameBinding",
  "              BindingIdentifier",
  "            IdentifierName",
  "          BindingProperty",
  "            SingleNameBinding",
  "              BindingIdentifier",
  "            IdentifierName",
  "        IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ObjectLiteral",
  "          PropertyDefinition",
  "            BooleanLiteral",
  "            IdentifierName",
  "          PropertyDefinition",
  "            IdentifierReference",
  "          PropertyDefinition",
  "            StringLiteral",
  "            IdentifierName",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ArrayLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        ArrayBindingPattern",
  "          BindingElement",
  "            ObjectBindingPattern",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "              SingleNameBinding",
  "                BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "        ArrayLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        TemplateLiteral",
  "          MultiplicativeExpression",
  "            IdentifierReference",
  "            IdentifierReference",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ConditionalExpression",
  "          BooleanLiteral",
  "          NumericLiteral",
  "          NumericLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        CoalesceExpression",
  "          CoalesceExpression",
  "            NullLiteral",
  "            IdentifierReference",
  "          NumericLiteral",
  "    AsyncFunctionDeclaration",
  "      BindingIdentifier",
  "      AsyncFunctionBody",
  "        ExpressionStatement",
  "          AwaitExpression",
  "    GeneratorDeclaration",
  "      BindingIdentifier",
  "      GeneratorBody",
  "        ExpressionStatement",
  "          YieldExpression",
  "        ExpressionStatement",
  "          YieldExpression",
  "        ReturnStatement",
  "          StringLiteral",
  "    AsyncGeneratorDeclaration",
  "      BindingIdentifier",
  "      AsyncGeneratorBody",
  "        ExpressionStatement",
  "          YieldExpression",
  "        ExpressionStatement",
  "          AwaitExpression",
  "        ExpressionStatement",
  "          YieldExpression",
  "        ReturnStatement",
  "          StringLiteral",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ParenthesizedExpression",
  "          AsyncArrowFunction",
  "            AsyncFunctionBody",
  "    LexicalDeclaration",
  "      LexicalBinding",
  "        BindingIdentifier",
  "        ParenthesizedExpression",
  "          AsyncArrowFunction",
  "            AsyncConciseBody",
  "    ClassDeclaration",
  "      BindingIdentifier",
  "      ClassTail",
  "        FieldDefinition",
  "          IdentifierName",
  "          NumericLiteral",
  "        FieldDefinition",
  "          PrivateIdentifier",
  "          NumericLiteral",
  "        MethodDefinition",
  "          IdentifierName",
  "          FunctionBody",
  "            ExpressionStatement",
  "              AssignmentExpression",
  "                MemberExpression",
  "                  IdentifierName",
  "                  ThisExpression",
  "                NumericLiteral",
  "        MethodDefinition",
  "          IdentifierName",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          FunctionBody",
  "        AsyncMethod",
  "          IdentifierName",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          AsyncFunctionBody",
  "        GeneratorMethod",
  "          IdentifierName",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          GeneratorBody",
  "        AsyncGeneratorMethod",
  "          IdentifierName",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          SingleNameBinding",
  "            BindingIdentifier",
  "          AsyncGeneratorBody",
  "    ClassDeclaration",
  "      BindingIdentifier",
  "      ClassTail",
  "        IdentifierReference",
  "        MethodDefinition",
  "          IdentifierName",
  "          FunctionBody",
  "            ExpressionStatement",
  "              SuperCall",
  "        MethodDefinition",
  "          IdentifierName",
  "          FunctionBody",
  "            ExpressionStatement",
  "              CallExpression",
  "                SuperProperty",
  "                  IdentifierName",
  "                NumericLiteral",
  "                NumericLiteral",
]
`;
